more button and labels

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,14 @@
                 app:layout_constraintHorizontal_bias="0.873"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="取消"
+                tools:layout_editor_absoluteX="19dp"
+                tools:layout_editor_absoluteY="14dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
