--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,4 +138,12 @@
         tools:layout_editor_absoluteX="127dp"
         tools:layout_editor_absoluteY="677dp" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="158dp"
+        tools:layout_editor_absoluteY="572dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
