--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,14 +110,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="忘記密碼?" />
+                android:text=" ▶ 註冊帳號"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="註冊" />
+                android:text=" ▶ 忘記密碼"
+                android:textAlignment="center" />
         </LinearLayout>
 
     </LinearLayout>
