--- a/app/src/main/res/layout/activity_registered_page.xml
+++ b/app/src/main/res/layout/activity_registered_page.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".registered_page"
     android:background="@drawable/page1">
+
     <TextView
         android:id="@+id/textView7"
         android:layout_width="350dp"
-        android:layout_height="69dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:text="註冊帳號"
@@ -17,13 +18,14 @@
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintVertical_bias="0.096" />
 
     <LinearLayout
         android:layout_width="350dp"
-        android:layout_height="400dp"
+        android:layout_height="500dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -136,11 +138,54 @@
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="連絡電話"
+                android:textColorHint="#C55A11" >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editText8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:ems="10"
+                    android:inputType="phone"
+                    android:text="" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="居住地址"
+                android:textColorHint="#C55A11" >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editText9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:ems="10"
+                    android:inputType="textPostalAddress"
+                    android:text="" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
         <Button
             android:id="@+id/button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="right"
-            android:background="@drawable/go" />
+            android:background="@drawable/go"
+            android:onClick="go"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
