--- a/app/src/main/res/layout/activity_registered_page.xml
+++ b/app/src/main/res/layout/activity_registered_page.xml
@@ -31,17 +31,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/textView7">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="真實姓名"
-                android:textColorHint="#C55A11" >
+                android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText3"
@@ -50,7 +51,7 @@
                     android:layout_gravity="center"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text=""/>
+                    android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
@@ -58,11 +59,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="暱稱(可更換)"
-                android:textColorHint="#C55A11" >
+                android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText4"
@@ -71,7 +73,7 @@
                     android:layout_gravity="center"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text=""/>
+                    android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
@@ -79,11 +81,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="信箱"
-                android:textColorHint="#C55A11" >
+                android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText5"
@@ -100,11 +103,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="帳號"
-                android:textColorHint="#C55A11" >
+                android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText6"
@@ -121,11 +125,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="密碼"
-                android:textColorHint="#C55A11" >
+                android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText7"
@@ -142,11 +147,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="連絡電話"
-                android:textColorHint="#C55A11" >
+                android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText8"
@@ -163,11 +169,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="居住地址"
-                android:textColorHint="#C55A11" >
+                android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText9"
@@ -186,6 +193,6 @@
             android:layout_height="50dp"
             android:layout_gravity="right"
             android:background="@drawable/go"
-            android:onClick="go"/>
+            android:onClick="go" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
