--- a/app/src/main/res/layout/activity_registered_page2.xml
+++ b/app/src/main/res/layout/activity_registered_page2.xml
@@ -21,6 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.096" />
+
     <LinearLayout
         android:layout_width="350dp"
         android:layout_height="500dp"
@@ -29,7 +30,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/textView1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,29 +39,32 @@
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/textView2"
                 android:textSize="20dp" />
 
         </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="top"
-        android:orientation="horizontal">
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:text="我已詳閱註冊須知" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/go"/>
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="top"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:text="我已詳閱註冊須知" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/go"
+                android:onClick="done"/>
+        </LinearLayout>
 
 
     </LinearLayout>
