--- a/app/src/main/res/layout/activity_registered_page2.xml
+++ b/app/src/main/res/layout/activity_registered_page2.xml
@@ -63,8 +63,15 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/go"
-                android:onClick="done"/>
+                android:onClick="registered"/>
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
 
 
     </LinearLayout>
