--- a/app/src/main/res/layout/fragment_page2.xml
+++ b/app/src/main/res/layout/fragment_page2.xml
@@ -4,11 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Page2">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/app_name" />
-
+        android:layout_gravity="fill_vertical"
+        android:background="@drawable/map"/>
 </FrameLayout>
