--- a/app/src/main/res/layout/fragment_page4.xml
+++ b/app/src/main/res/layout/fragment_page4.xml
@@ -11,7 +11,8 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="登出"
-        android:onClick="logout"/>
+        android:layout_gravity="center"
+        android:onClick="logout"
+        android:text="登出" />
 
 </FrameLayout>
