--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/loginpage"
-    android:theme="@style/loginTheme">
+    tools:actionBarNavMode="">
 
 
     <LinearLayout
