--- a/app/src/main/res/layout/activity_registered_page.xml
+++ b/app/src/main/res/layout/activity_registered_page.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".registered_page"
-    android:background="@drawable/page1"
-    android:theme="@style/loginTheme">
+    android:background="@drawable/page1">
 
     <TextView
         android:id="@+id/textView7"
