--- a/app/src/main/res/layout/activity_registered_page2.xml
+++ b/app/src/main/res/layout/activity_registered_page2.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/page1"
-    tools:context=".registered_page2"
-    android:theme="@style/loginTheme">
+    tools:context=".registered_page2">
     <TextView
         android:id="@+id/textView1"
         android:layout_width="350dp"
