--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/loginpage"
-    tools:actionBarNavMode="">
-
+    android:background="@drawable/loginpage">
 
     <LinearLayout
         android:id="@+id/linearLayout"
