Realtime Database 聊天室 一半part 2

--- a/app/src/main/res/layout/fragment_page2.xml
+++ b/app/src/main/res/layout/fragment_page2.xml
@@ -5,19 +5,29 @@
     android:layout_height="match_parent"
     tools:context=".fragment.Page2">
 
-    <ScrollView
+    <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
             <ImageView
                 android:layout_width="809dp"
                 android:layout_height="1439dp"
                 android:background="@drawable/map" />
-        </LinearLayout>
-    </ScrollView>
+
+        </LinearLayout></ScrollView>
+    </HorizontalScrollView>
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
