--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -1,38 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".chatroom">
 
-    <ScrollView
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/send_Text"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="?actionBarSize"
+        android:layout_alignParentTop="true">
 
         <TextView
-            android:id="@+id/message_display"
+            android:id="@+id/username"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello world" />
-    </ScrollView>
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <Button
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/display_msg"
+        android:layout_above="@+id/send_Text"
+        android:layout_below="@+id/appBarLayout">
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <ImageButton
         android:id="@+id/send"
         android:layout_width="wrap_content"
-        android:layout_height="?actionBarSize"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="傳送"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/display_msg"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/ic_send_black_24dp" />
 
     <EditText
         android:id="@+id/send_Text"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/send"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/send" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
