google_map_api 建置事前工作

--- a/app/src/main/res/layout/fragment_page2.xml
+++ b/app/src/main/res/layout/fragment_page2.xml
@@ -1,33 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/map"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.Page2">
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:layout_width="809dp"
-                android:layout_height="1439dp"
-                android:background="@drawable/map" />
-
-        </LinearLayout></ScrollView>
-    </HorizontalScrollView>
-
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</fragment>
