修復已知問題 並且用前端限制信箱輸入格式

--- a/app/src/main/res/layout/activity_add_goods.xml
+++ b/app/src/main/res/layout/activity_add_goods.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/AppTheme.Pop_window"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".addGoods"
-    android:background="@drawable/pop_windows">
+    android:background="@drawable/pop_windows"
+    tools:context=".addGoods">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,7 +19,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
 
 
             <TextView
@@ -37,8 +37,8 @@
                 android:id="@+id/upload_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/ic_add_white_24dp"
                 android:background="@color/cardview_dark_background"
+                android:src="@drawable/ic_add_white_24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
