--- a/app/src/main/res/layout/activity_registered_page.xml
+++ b/app/src/main/res/layout/activity_registered_page.xml
@@ -101,6 +101,7 @@
                     android:layout_gravity="center"
                     android:ems="10"
                     android:inputType="textEmailAddress"
+                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
                     android:text="" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
