--- a/app/src/main/res/drawable/pop_windows.xml
+++ b/app/src/main/res/drawable/pop_windows.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:startColor="#EAC5B0"
-        android:endColor="#EAC5B0"
-        android:angle="270"/>
     <corners
-        android:radius="20dp"
+        android:radius="15dp"
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp"/>
+    <solid android:color="#EAC5B0"/>
 </shape>
