--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:imeOptions="actionNext"
+                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
                 android:inputType="textEmailAddress" />
 
         </LinearLayout>
