--- a/app/src/main/res/layout/activity_registered_page2.xml
+++ b/app/src/main/res/layout/activity_registered_page2.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     android:background="@drawable/page1"
     tools:context=".registered_page2">
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="350dp"
         android:layout_height="70dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="註冊須知"
+        android:text="@string/regKnow"
         android:textColor="#F8CBAD"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,7 +57,7 @@
                 android:id="@+id/checkBox"
                 android:layout_width="300dp"
                 android:layout_height="match_parent"
-                android:text="我已詳閱註冊須知" />
+                android:text="@string/knowChck" />
 
             <Button
                 android:id="@+id/button2"
